thêm mapper cho toàn bộ module để tránh map thủ công trong service Tầng Service: Chỉ nên chứa các logic nghiệp vụ (như kiểm tra điều kiện mở lớp, kiểm tra trùng lặp...). Tầng Mapper: Chỉ đảm nhận việc chuyển đổi cấu trúc dữ liệu giữa Entity và DTO. Việc tách biệt này giúp code dễ đọc, dễ tái sử dụng và chuẩn theo nguyên tắc thiết kế SOLID (Single Responsibility).